# flow_contacts_ios.yaml com.apple.MobileAddressBook
appId: br.com.mobile
name: Modelo generico de login
tags: 
  - onboarding
  - login
---
- runFlow: android_loader_pages.yaml
#Realizar Login valido
- launchApp:
    clearState: true
- waitForAnimationToEnd:
    timeout: 50000

    #Permitir rastreamento
- runFlow:
    when:
      visible: ${output.login.modalConfirmBR}
    commands:
        - tapOn: ${output.login.modalConfirmBR}

- runFlow:
    when:
      visible: ${output.login.modalConfirmBR}
    commands:
        - tapOn: ${output.login.modalConfirmBR}

#Caso esteja desatualizado, clicar em não atualizar o APP
- runFlow:
    when:
      visible: ${output.login.softUpdateBanner}
    commands:
        - tapOn: ${output.login.optSoftUpdate}
- extendedWaitUntil:
    visible: ${output.login.btnFirstScreenLogin}
    timeout: 60000 

- tapOn: ${output.login.btnFirstScreenLogin}
- runFlow:
    when:
      visible: ${output.login.optContinuar}
    commands:
        - tapOn: ${output.login.optContinuar}


- tapOn: ${output.login.fldLoginEmail}
- inputText: ${USERNAME}
- pressKey: Enter
- inputText: ${PASSWORD}
- pressKey: Enter
#Clique para ocultar o teclado
- tapOn:
    point: "92%,58%"


#Se der falha de comunicação, tenta novamente
- runFlow:
    when:
      visible: ${output.login.bannerFalhaComunicacao}
    commands:
        - tapOn: ${output.login.btnRetry}
- waitForAnimationToEnd:
    timeout: 50000    
- runFlow: 
    file: ./android_banners_tutorial.yaml

